# Qbert0G

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  config.yaml.example  pyproject.toml
deployments/qr-server/: README.md
examples/: client.py
modal/: README.md  client.py
scripts/: fit_fingerprint.py  fit_markov.py
src/qbert0g/: __init__.py  cli.py  coherence.py  config.py  controls.py  database.py  devices.py  fingerprint.py  gate.py  integrators.py  profiles.py  purity.py  server.py  sources.py
src/qbert0g/proto/: __init__.py  entropy_service_pb2.py  entropy_service_pb2_grpc.py  purity_service_pb2.py  purity_service_pb2_grpc.py  qrng_pb2.py  qrng_pb2_grpc.py
tests/: conftest.py  test_cli_sources.py  test_coherence.py  test_config.py  test_controls.py  test_database.py  test_devices.py  test_fingerprint.py  test_fit_markov.py  test_integrators.py  test_profiles.py  test_purity.py  test_purity_service.py  test_qr_sampler_seam.py  test_server.py  test_sources.py
